--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 		<title>Moja stranica</title>
 	</head>
 		<p>
-		ovo je neki odlomak lllll
+		ovo je neki odlomak                           llll1
 		</p>
 	</body>
 
 </html>
+
 
