--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 		<title>Moja stranica</title>
 	</head>
 		<p>
-		ovo je neki odlomak                           llll1
+		Ovo je <b>moj</b> tekst. Ponekad je malo <i>ukošen</i>, a ponekad je malo <b>podebljan</b>. Poželim li to, tekst može biti istovremeno <i><b>i podebljano i ukošeno.</b></i>
 		</p>
 	</body>
 
 </html>
+
 
 
