--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 		<title>Moja stranica</title>
 	</head>
 		<p>
-		Ovo je <b>moj</b> tekst. Ponekad je malo <i>ukošen</i>, a ponekad je malo <b>podebljan</b>. Poželim li to, tekst može biti istovremeno <i><b>i podebljano i ukošeno.</b></i>
+		Ovo je <b>moj</b> tekst. Ponekad je malo <i>ukošen</i>, a ponekad je malo <b>podebljan</b>. Poželim li to, tekst može biti istovremeno <i><b>i podebljan i ukošen.</b></i>
 		</p>
 	</body>
 
 </html>
+
 
 
 
