--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
 	</head>
 		<p>
 		Ovo je <b>moj</b> tekst. Ponekad je malo <i>ukošen</i>, a ponekad je malo <b>podebljan</b>. Poželim li to, tekst može biti istovremeno <i><b>i podebljan i ukošen.</b></i>
+		<h1>Podnasov1</h1>
+		<h2>Podnaslov2</h2>
+		<h3>podnasloc3</h3>
 		</p>
 	</body>
 
 </html>
+
 
 
 
