--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
 		<h2>Podnaslov2</h2>
 		<h3>podnasloc3</h3>
 		</p>
+			nekajneekaj nekaj nekaj,
+			<br> nekaj nekaj nekaj.
+		<p/>
 	</body>
 
 </html>
+
 
 
 
