--- a/index.html
+++ b/index.html
@@ -11,9 +11,15 @@
 			nekajneekaj nekaj nekaj,
 			<br> nekaj nekaj nekaj.
 		<p/>
+		<pre>
+			razmaciii 
+			ibibibib f ff 
+			fff   fff
+		</pre>
 	</body>
 
 </html>
+
 
 
 
