--- a/index.html
+++ b/index.html
@@ -12,13 +12,19 @@
 			<br> nekaj nekaj nekaj.
 		<p/>
 		<pre>
-			razmaciii 
+			raz &nbsp; &nbsp;ii 
 			ibibibib f ff 
 			fff   fff
 		</pre>
+	<ol> 
+	<li>snjeg</li>
+	<li>kisa</li>
+	<li>mraz</li>
+	</ol>
 	</body>
 
 </html>
+
 
 
 
