--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	</head>
 
 		Ovo je <b>moj</b> tekst. Ponekad je malo <i>ukošen</i>, a ponekad je malo <b>podebljan</b>. Poželim li to, tekst može biti istovremeno <i><b>i podebljan i ukošen.</b></i>
-		<h1>Podnasov1</h1>
+		<h1>BOK DORA</h1>
 		<h2>Podnaslov2</h2>
 		<h3>podnasloc3</h3>
 		</p>
@@ -24,6 +24,7 @@
 	</body>
 
 </html>
+
 
 
 
