--- a/index.html
+++ b/index.html
@@ -25,9 +25,16 @@
 	<li>deda mraz</li>
 	<li>baka mraz</li>
 	</ul>
+	<ul> style="list-style-type:square;">
+	<li> nesta</li>
+	<li>nekaj</li>
+
+		
+	</ul>
 	</body>
 
 </html>
+
 
 
 
