--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<li>deda mraz</li>
 	<li>baka mraz</li>
 	</ul>
-	<ul> style="list-style-type:square;">
+	<ul style="list-style-type:square;">
 	<li> nesta</li>
 	<li>nekaj</li>
 
@@ -34,6 +34,7 @@
 	</body>
 
 </html>
+
 
 
 
