--- a/index.html
+++ b/index.html
@@ -28,12 +28,18 @@
 	<ul style="list-style-type:square;">
 	<li> nesta</li>
 	<li>nekaj</li>
-
-		
 	</ul>
+	<dl> 
+	<dt>heart emoji</dt>
+		<dd> emojiu obliku srca</dd>
+	<dt> lol</dt>
+		<dd>laughgh out loud</dd>
+	
+	</dl>
 	</body>
 
 </html>
+
 
 
 
