--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
 		<dd>laughgh out loud</dd>
 	
 	</dl>
+	<img src="valentines-day-cute-heart-illustration-heart-kawaii-chibi-drawing-style-heart-cartoon-valentine-s-day-vector (1).jpg">
 	</body>
 
 </html>
+
 
 
 
