--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
 		<dd>laughgh out loud</dd>
 	
 	</dl>
-	<img src="mushroom-children-illustration-cute-jpg-63832869 (1).jpg">
+	<img src= width(100) height(100) "mushroom-children-illustration-cute-jpg-63832869 (1).jpg">
 	</body>
 
 </html>
+
 
 
 
