--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
 	
 	</dl>
 	<img src= <width(100)> <height(100)> "mushroom-children-illustration-cute-jpg-63832869 (1).jpg">
-	<a href = "https://gimnazija-cakovec.hr/" Web stranica nsde skole.>
+	<a href = "https://gimnazija-cakovec.hr/"> Web stranica nsde skole. <a/>
 	</body>
 
 </html>
+
 
 
 
