--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 	<head>
 		<title>Moja stranica</title>
 	</head>
-	<a href=""> Naslovna </a>
+	<body>
+	<a href="index (4).html"> Naslovna </a>
 	<a href=""> O meni </a>
 	<a href=""> Kontakt </a>
 
@@ -41,9 +42,10 @@
 	</dl>
 	<img src= "mushroom-children-illustration-cute-jpg-63832869 (1).jpg">
 	<a href = "https://gimnazija-cakovec.hr/"> Web stranica nsde skole. <a/>
-	</body>
+
 
 </html>
+
 
 
 
