--- a/index (4).html
+++ b/index (4).html
@@ -3,7 +3,7 @@
 		<title>Moja stranica</title>
 	</head>
 
-		Ovo je <b>moj</b> tekst. Ponekad je malo <i>ukošen</i>, a ponekad je malo <b>podebljan</b>. Poželim li to, tekst može biti istovremeno <i><b>i podebljan i ukošen.</b></i>
+		Ovo je aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa<b>moj</b> tekst. Ponekad je malo <i>ukošen</i>, a ponekad je malo <b>podebljan</b>. Poželim li to, tekst može biti istovremeno <i><b>i podebljan i ukošen.</b></i>
 		<h1>BOK DORA</h1>
 		<h2>Podnaslov2</h2>
 		<h3>podnasloc3</h3>
@@ -41,6 +41,7 @@
 	</body>
 
 </html>
+
 
 
 
