--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	</head>
 	<body>
 	<a href="index (4).html"> Naslovna </a>
-	<a href=""> O meni </a>
+	<a href="index.html"> O meni </a>
 	<a href=""> Kontakt </a>
 
 		Ovo je <b>moj</b> tekst. Ponekad je malo <i>ukošen</i>, a ponekad je malo <b>podebljan</b>. Poželim li to, tekst može biti istovremeno <i><b>i podebljan i ukošen.</b></i>
@@ -45,6 +45,7 @@
 
 
 </html>
+
 
 
 
