--- a/indekontakt.html
+++ b/indekontakt.html
@@ -7,7 +7,7 @@
 	<a href="index.html"> O meni </a>
 	<a href=""> Kontakt </a>
 
-		Ovo je <b>moj</b> tekst. Ponekad je malo <i>ukošen</i>, a ponekad je malo <b>podebljan</b>. Poželim li to, tekst može biti istovremeno <i><b>i podebljan i ukošen.</b></i>
+		Ovobbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb je <b>moj</b> tekst. Ponekad je malo <i>ukošen</i>, a ponekad je malo <b>podebljan</b>. Poželim li to, tekst može biti istovremeno <i><b>i podebljan i ukošen.</b></i>
 		<h1>BOK DORA</h1>
 		<h2>Podnaslov2</h2>
 		<h3>podnasloc3</h3>
@@ -45,6 +45,7 @@
 
 
 </html>
+
 
 
 
