--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<body>
 	<a href="index (4).html"> Naslovna </a>
 	<a href="index.html"> O meni </a>
-	<a href=""> Kontakt </a>
+	<a href="inekontakt.html"> Kontakt </a>
 
 		Ovo je <b>moj</b> tekst. Ponekad je malo <i>ukošen</i>, a ponekad je malo <b>podebljan</b>. Poželim li to, tekst može biti istovremeno <i><b>i podebljan i ukošen.</b></i>
 		<h1>BOK DORA</h1>
@@ -45,6 +45,7 @@
 
 
 </html>
+
 
 
 
