--- a/index (4).html
+++ b/index (4).html
@@ -2,6 +2,9 @@
 	<head>
 		<title>Moja stranica</title>
 	</head>
+	<a href="index (4).html"> Naslovna </a>
+	<a href="index.html"> O meni </a>
+	<a href="inekontakt.html"> Kontakt </a>
 
 		Ovo je aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa<b>moj</b> tekst. Ponekad je malo <i>ukošen</i>, a ponekad je malo <b>podebljan</b>. Poželim li to, tekst može biti istovremeno <i><b>i podebljan i ukošen.</b></i>
 		<h1>BOK DORA</h1>
@@ -41,6 +44,7 @@
 	</body>
 
 </html>
+
 
 
 
