--- a/index (4).html
+++ b/index (4).html
@@ -4,7 +4,7 @@
 	</head>
 	<a href="index (4).html"> Naslovna </a>
 	<a href="index.html"> O meni </a>
-	<a href="inekontakt.html"> Kontakt </a>
+	<a href="indekontakt.html"> Kontakt </a>
 
 		Ovo je aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa<b>moj</b> tekst. Ponekad je malo <i>ukošen</i>, a ponekad je malo <b>podebljan</b>. Poželim li to, tekst može biti istovremeno <i><b>i podebljan i ukošen.</b></i>
 		<h1>BOK DORA</h1>
@@ -44,6 +44,7 @@
 	</body>
 
 </html>
+
 
 
 
