--- a/indekontakt.html
+++ b/indekontakt.html
@@ -42,9 +42,11 @@
 	</dl>
 	<img src= "mushroom-children-illustration-cute-jpg-63832869 (1).jpg">
 	<a href = "https://gimnazija-cakovec.hr/"> Web stranica nsde skole. <a/>
-
+	<a href="mailto:rendomx@gmail.com"> POSAKJI <a/>
+	
 
 </html>
+
 
 
 
