--- a/index (4).html
+++ b/index (4).html
@@ -2,6 +2,8 @@
 	<head>
 		<title>Moja stranica</title>
 	</head>
+		<map name="predsjednik">
+			<area shape="circle" coords= #
 	<a href="index (4).html"> Naslovna </a>
 	<a href="index.html"> O meni </a>
 	<a href="indekontakt.html"> Kontakt </a>
@@ -47,6 +49,7 @@
 	</body>
 
 </html>
+
 
 
 
