--- a/index (4).html
+++ b/index (4).html
@@ -3,7 +3,11 @@
 		<title>Moja stranica</title>
 	</head>
 		<map name="predsjednik">
-			<area shape="circle" coords= #
+			<area shape="circle" coords="40,48,25" href=https://www.smithsonianmag.com/history/the-making-of-mount-rushmore-121886182/">
+			<area shape="circle" coords="104,74,25" href=https://www.smithsonianmag.com/history/the-making-of-mount-rushmore-121886182/">
+			<area shape="circle" coords="156,115,25" href=https://www.smithsonianmag.com/history/the-making-of-mount-rushmore-121886182/">
+			<area shape="circle" coords="210,116,25" href=https://www.smithsonianmag.com/history/the-making-of-mount-rushmore-121886182/">
+			
 	<a href="index (4).html"> Naslovna </a>
 	<a href="index.html"> O meni </a>
 	<a href="indekontakt.html"> Kontakt </a>
@@ -49,6 +53,7 @@
 	</body>
 
 </html>
+
 
 
 
