--- a/index (4).html
+++ b/index (4).html
@@ -2,6 +2,7 @@
 	<head>
 		<title>Moja stranica</title>
 	</head>
+	<body/>
 		<map name="predsjednik">
 			<area shape="circle" coords="40,48,25" href=https://www.smithsonianmag.com/history/the-making-of-mount-rushmore-121886182/">
 			<area shape="circle" coords="104,74,25" href=https://www.smithsonianmag.com/history/the-making-of-mount-rushmore-121886182/">
@@ -53,6 +54,7 @@
 	</body>
 
 </html>
+
 
 
 
