--- a/index.html
+++ b/index.html
@@ -42,9 +42,30 @@
 	</dl>
 	<img src= "mushroom-children-illustration-cute-jpg-63832869 (1).jpg">
 	<a href = "https://gimnazija-cakovec.hr/"> Web stranica nsde skole. <a/>
+
+	 </table>
+<table border = "1">
+<tr>
+<th colspan="2">ime i prezime</th>
+<th>rođen</th>
+</tr>
+<tr>
+<td>baldo</td>
+<td>momce</td>
+<td>1500.</td>
+</tr>
+<tr>
+<td>dora</td>
+<td rowspan="2">orejrasna</td>
+<td rowspan="2">2008.</td>
+</tr>
+<tr>
+<td>ema</td>
+</table>
 	
 
 </html>
+
 
 
 
