--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<a href = "https://gimnazija-cakovec.hr/"> Web stranica nsde skole. <a/>
 
 	 </table>
-<table border = "1" width="50%">
+<table border = "1" width="50%" cellpadding="50" cellspacing="50">
 <tr>
 <th colspan="2">ime i prezime</th>
 <th>rođen</th>
@@ -65,6 +65,7 @@
 	
 
 </html>
+
 
 
 
