--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <th>rođen</th>
 </tr>
 <tr>
-<td>baldo</td>
+<td align="center">baldo</td>
 <td>momce</td>
 <td>1500.</td>
 </tr>
@@ -65,6 +65,7 @@
 	
 
 </html>
+
 
 
 
