--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </tr>
 <tr>
 <td align="center">baldo</td>
-<td>momce</td>
+<td valign="top">momce</td>
 <td>1500.</td>
 </tr>
 <tr>
@@ -65,6 +65,7 @@
 	
 
 </html>
+
 
 
 
