--- a/index a.html
+++ b/index a.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Obrsci<7title>
+    <title>Obrsci</title>
 </head<
 
 <body>
@@ -9,6 +9,7 @@
           <input type="text" name="ime" size="125" maxlength="30"
         <p/>
 <body/>
+
 
 
 
