--- a/index a.html
+++ b/index a.html
@@ -6,9 +6,19 @@
 <body>
     <form>
         <p> Ime:
-          <input type="text" name="ime" size="125" maxlength="30"
+          <input type="text" name="ime" size="125" maxlength="30">
         <p/>
+        <p>Prezime:
+            <input type="text" name="prezime" size="25 maxlength="30"
+        </p>
+        <p> Komentar:
+            <textarea> name="komentar" rows="5" cols="55">
+            </textarea>
+        
+        </p>
+        </form>
 <body/>
+
 
 
 
