--- a/index a.html
+++ b/index a.html
@@ -12,12 +12,13 @@
             <input type="text" name="prezime" size="25 maxlength="30"
         </p>
         <p> Komentar:
-            <textarea> name="komentar" rows="5" cols="55">
+            <textarea name="komentar" rows="5" cols="55">
             </textarea>
         
         </p>
         </form>
 <body/>
+
 
 
 
