--- a/index a.html
+++ b/index a.html
@@ -15,9 +15,13 @@
             <textarea name="komentar" rows="5" cols="55">
             </textarea>
         </p>
+        <p/> Lozinka:
+            <input type="password" name="ime" size="20" maxlength="20">
+        <p/>
     
     </form>
 <body/>
+
 
 
 
