--- a/index a.html
+++ b/index a.html
@@ -21,9 +21,13 @@
         <p>
         <input type="button" name="gumb" value="nez">
         </p>
+        <p>
+        <input type="checkbox" name="kvacica" checked/unchecked>
+        </p>
     
     </form>
 <body/>
+
 
 
 
