--- a/index a.html
+++ b/index a.html
@@ -24,9 +24,13 @@
         <p>
         <input type="checkbox" name="kvacica" checked/unchecked>
         </p>
+        <p>
+        <input type="radio" name="krug" unchecked>
+        </p>
     
     </form>
 <body/>
+
 
 
 
