--- a/index a.html
+++ b/index a.html
@@ -14,6 +14,11 @@
         <p> Komentar:
             <textarea name="komentar" rows="5" cols="55">
             </textarea>
+        <p> Odaberi spol:
+            <input type="radio" name="spol" muški>
+            <input type="radio" name="spol" ženski>
+                
+        </p>
         </p>
         <p/> Lozinka:
             <input type="password" name="ime" size="20" maxlength="20">
@@ -30,6 +35,7 @@
     
     </form>
 <body/>
+
 
 
 
