--- a/index a.html
+++ b/index a.html
@@ -15,8 +15,8 @@
             <textarea name="komentar" rows="5" cols="55">
             </textarea>
         <p> Odaberi spol:
-            <input type="radio" name="spol" muški>
-            <input type="radio" name="spol" ženski>
+            <input type="radio" name="spol"> muški
+            <input type="radio" name="spol"> ženski
                 
         </p>
         </p>
@@ -35,6 +35,7 @@
     
     </form>
 <body/>
+
 
 
 
