--- a/index (7).html
+++ b/index (7).html
@@ -4,9 +4,9 @@
 		body {
 			font-family: Calibri:
 			font-size: 18px:
-			color: rgb:(17, 28, 150)
+			color: rgb:(255, 255, 255)
 			font-weight: bold:
-			background-color: #CCDDEF
+			background-color: #FF0000
 		}
 	</style>
 	<title>Stranica</title>
@@ -15,6 +15,7 @@
 	Ovo je moja str
 </body<>
 </html>
+
 
 
 
