--- a/index (7).html
+++ b/index (7).html
@@ -1,20 +1,51 @@
 <html>
+
 <head>
 	<style type = "text/css">
-		body {
-			font-family: Calibri:
-			font-size: 18px:
-			color: rgb:(255, 255, 255)
-			font-weight: bold:
-			background-color: #FF0000
+		.prvi{
+			font-family:"Calibri";
+			font-size:30px;
+			color:deeppink;
+		}
+		.drugi{
+			font-family:"Times New Roman";
+			font-size:15px;
+			color:lightpink;
+			font-weight:bold;
+		}
+		.treci{
+			font-family:Verdana;
+			font-size:10px;
+			color:rgb(137, 115, 118)
+		}
+		.cetvrti{
+			font-family:Courier;
+			font-size:10px;
+			color:rgb(62, 60, 62);
+			font-style:Italic;
+
+
 		}
 	</style>
-	<title>Stranica</title>
+
+	<title> MOJA STRANICA :D</title>
+
+
+
 </head>
+
 <body>
-	Ovo je moja str
-</body<>
+	<span class = "prvi"> Lol</span>
+	<span class = "drugi"> bla</span>
+	<span class = "treci"> ble</span>
+	<span class = "cetvrti"> stranica</span>
+</body>
+
+
+
+
 </html>
+
 
 
 
