--- a/index (7).html
+++ b/index (7).html
@@ -28,23 +28,24 @@
 		}
 	</style>
 
-	<title> MOJA STRANICA :D</title>
+	<title> stranica </title>
 
 
 
 </head>
 
 <body>
-	<span class = "prvi"> Lol</span>
+	<span class = "prvi"> hi</span>
 	<span class = "drugi"> bla</span>
-	<span class = "treci"> ble</span>
-	<span class = "cetvrti"> stranica</span>
+	<span class = "treci"> <3</span>
+	<span class = "cetvrti"> abcdefgh </span>
 </body>
 
 
 
 
 </html>
+
 
 
 
