--- a/index (7) (4).html
+++ b/index (7) (4).html
@@ -1,50 +1,34 @@
 <html>
-
 <head>
-	<style type = "text/css">
-		.prvi{
-			font-family:"Calibri";
-			font-size:30px;
-			color:deeppink;
-		}
-		.drugi{
-			font-family:"Times New Roman";
-			font-size:15px;
-			color:lightpink;
-			font-weight:bold;
-		}
-		.treci{
-			font-family:Verdana;
-			font-size:10px;
-			color:rgb(137, 115, 118)
-		}
-		.cetvrti{
-			font-family:Courier;
-			font-size:10px;
-			color:rgb(62, 60, 62);
-			font-style:Italic;
-
-
-		}
-	</style>
-
-	<title> stranica </title>
-
-
-
+    <style type = "text/css">
+        header{
+            background-color: orange;
+            border: thin solid grey;
+            margin: 10px;
+            padding:10px;
+            text-align: center;
+        }
+        header h1{
+            margin:0px;
+            color: white;
+            font-size: xx-large;
+        }
+        header .opis{
+            margin:0px;
+            font-weight: bold;
+        }
+        header .autor{
+            margin:0px;
+            font-style: italic;
+            font-size: small;
+        }
+    </style>
 </head>
-
-<body>
-	<span class = "prvi"> hi</span>
-	<span class = "drugi"> bla</span>
-	<span class = "treci"> <3</span>
-	<span class = "cetvrti"> abcdefgh </span>
-</body>
-
-
-
-
-</html>
+<html>
+		
+		
+		
+	
 
 
 
