Update index (7) (4).html

--- a/index (7) (4).html
+++ b/index (7) (4).html
@@ -24,11 +24,19 @@
         }
     </style>
 </head>
+<header>
+	<h1> prvo mehancisko racunalo </h1>
+	<p class = "opis"> tkomi kada je izumljeno prvo mehanicko racunlo </p>
+	<p class = "autor"> Hrvoje Horvat </p>
+	
+	
+</header>
 <html>
 		
 		
 		
 	
+
 
 
 
