Update index (7) (4).html

--- a/index (7) (4).html
+++ b/index (7) (4).html
@@ -22,6 +22,14 @@
             font-style: italic;
             font-size: small;
         }
+		footer{
+			background-color: orange;
+			border: thin solid grey;
+			font-size: smaller;
+			font-style: Italic;
+			text-align: center;
+			clear: both;
+			}
     </style>
 </head>
 <header>
@@ -29,13 +37,16 @@
 	<p class = "opis"> tkomi kada je izumljeno prvo mehanicko racunlo </p>
 	<p class = "autor"> Hrvoje Horvat </p>
 	
-	
 </header>
+<footer>
+	Copyright &copy: hrvoje orbat 2019.
+</footer>
 <html>
 		
 		
 		
 	
+
 
 
 
