Update index (7) (4).html

--- a/index (7) (4).html
+++ b/index (7) (4).html
@@ -29,7 +29,12 @@
 			font-style: Italic;
 			text-align: center;
 			clear: both;
-			}
+		}
+		sadrzaj{
+			font-size: large;
+			text-align: justify:
+			padding: 10px;
+			
     </style>
 </head>
 <header>
@@ -46,6 +51,7 @@
 		
 		
 	
+
 
 
 
