Update index (7) (4).html

--- a/index (7) (4).html
+++ b/index (7) (4).html
@@ -1,56 +1,74 @@
 <html>
 <head>
-    <style type = "text/css">
+    <style type="text/css">
         header{
             background-color: orange;
-            border: thin solid grey;
+            border: thin solid gray;
             margin: 10px;
-            padding:10px;
+            padding: 10px;
             text-align: center;
         }
         header h1{
-            margin:0px;
+            margin: 0px;
             color: white;
             font-size: xx-large;
         }
         header .opis{
-            margin:0px;
+            margin: 0px;
             font-weight: bold;
         }
         header .autor{
-            margin:0px;
+            margin: 0px;
             font-style: italic;
             font-size: small;
         }
-		footer{
-			background-color: orange;
-			border: thin solid grey;
-			font-size: smaller;
-			font-style: Italic;
-			text-align: center;
-			clear: both;
-		}
-		sadrzaj{
-			font-size: large;
-			text-align: justify:
-			padding: 10px;
-			
+        footer{
+            background-color: orange;
+            border: thin solid gray;
+            font-size: smaller;
+            font-style: italic;
+            text-align: center;
+            clear: both;
+            padding: 10;
+        }
+        .sadržaj{
+            font-size: large;
+            text-align: justify;
+            padding: 10;
+        }
+        .sadržaj h1{
+            font-size: x-large;
+            color: #7695fe;
+            font-weight: bold;
+            text-align: left;
+        }
     </style>
 </head>
 <header>
-	<h1> prvo mehancisko racunalo </h1>
-	<p class = "opis"> tkomi kada je izumljeno prvo mehanicko racunlo </p>
-	<p class = "autor"> Hrvoje Horvat </p>
-	
+    <h1> Prva mehanička računala </h1>
+    <p class="opis"> Tko i kada je izumio prvo mehaničko računalo </p>
+    <p class="autor"> Hrvoje Horvat </p>
 </header>
+<div class="sadržaj">
+    <h1> Wilhelm Schickard </h1>
+    <hr>
+    Njemački matematičar Wilhelm Schickard izradio je različite
+</div>
+<div class="sadržaj">
+    <h1> Blaise Pascal </h1>
+    <hr>
+    Francuski filozof
+</div>
 <footer>
-	Copyright &copy: hrvoje orbat 2019.
+    Copyright &copy; Hrvoje Horvat 2020.
 </footer>
-<html>
+</html>
+ 
 		
 		
 		
 	
+
 
 
 
